# python-fastapi-example-oms

./: .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  docker-compose.unittests.yml  docker-compose.yml  pyproject.toml
.claude/agents/: devops-hardened-engineer.md  tdd-feature-engineer.md
.github/workflows/: tests.yml  unit-tests.yml
alembic/: env.py
alembic/versions/: 084d9bd91fca_add_users.py  6e6b7e4f8a18_add_invoices_table.py  814107d68bb6_add_cancelled_and_fulfilled_to_.py  91a829a056ca_init.py  a1b2c3d4e5f6_add_unique_constraint_on_invoices_order_id.py  b2c3d4e5f6a7_add_user_id_to_orders.py
app/: main.py
app/api/: router.py
app/core/: config.py
app/db/: session.py
app/modules/orders/: models.py  repository.py  routes.py  schemas.py  service.py
app/modules/payment/: models.py  repository.py  routes.py  schemas.py  service.py
app/modules/users/: repository.py  routes.py  service.py
tests/integration/: conftest.py  test_orders.py  test_payment.py  test_users.py
tests/unit/: conftest.py  test_auth.py  test_config.py  test_orders.py  test_payment.py  test_users.py
