[project]
name = "app"
version = "0.1.0"
dependencies = [
    "fastapi==0.136.0",
    "uvicorn==0.45.0",
    "SQLAlchemy==2.0.49",
    "psycopg2-binary==2.9.12",
    "pydantic==2.13.3",
    "alembic==1.18.4",
    "bcrypt==4.0.1",
    "PyJWT==2.10.1",
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.3",
    "pytest-asyncio==1.3.0",
    "httpx==0.28.1",
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
